syntax = "proto3";
package pt.ulisboa.tecnico.thesis.benchmarks.contract;

message CreateReplicaRequest {
    int32 replicaId = 1;
}

message CreateReplicaResponse {
    bool ok = 1;
}

service ProcessCreationService {
    rpc replica(CreateReplicaRequest) returns (CreateReplicaResponse);
}